fix issue info wrap

--- a/src/pages/issue/index.css
+++ b/src/pages/issue/index.css
@@ -268,10 +268,15 @@
   #issue #issue-metadata {
     padding-top: 24px;
     padding-bottom: 24px;
+
+    display: flex;
+    flex-flow: column-reverse nowrap;
+    row-gap: 24px;
   }
 
   #issue #issue-metadata .cover-container {
     width: 160px;
+    width: 100%;
     height: 200px;
   }
 
